--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,24 +5,13 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "(gdb) Launch",
-            "type": "cppdbg",
+            "type": "lldb",
             "request": "launch",
+            "name": "Debug",
             "program": "${workspaceFolder}/build/SegFSR",
-            "args": ["/media/llg/MyPassport/upholstery/0_Raw/luming/mes/luming_1_mes_100m.ply",
-                     "/media/llg/MyPassport/upholstery/0_Raw/luming/mes/luming_1_mes_100m_segfsr.ply"],
-            "stopAtEntry": false,
-            "cwd": "${workspaceFolder}",
-            "environment": [],
-            "externalConsole": false,
-            "MIMode": "gdb",
-            "setupCommands": [
-                {
-                    "description": "Enable pretty-printing for gdb",
-                    "text": "-enable-pretty-printing",
-                    "ignoreFailures": true
-                }
-            ]
+            "args": ["--ipath_of_ply","/media/i9/MyPassport/linlinge/Dataset/23_MVTec_AD/mvtec_3d_anomaly_detection/bagel/test/combined/my_cvt_ply/bagel_000.ply",
+                     "--opath", "/media/i9/MyPassport/linlinge/Dataset/23_MVTec_AD/mvtec_3d_anomaly_detection/bagel/test/combined/my_cvt_ply/out"],
+            "cwd": "${workspaceFolder}"
         }
     ]
 }
